plugins {
    id 'java'
    id 'application'
    id 'io.freefair.lombok' version '6.6.3'
    id 'idea'
}
repositories {
    mavenCentral()
    maven {url "https://repo.spring.io/plugins-release/"}
    maven {url "https://maven.aliyun.com/repository/spring-plugin"}
    mavenLocal()
}

group = 'com.dayu'
version = '1.0.0'
sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

idea {
    module {
        downloadSources = true
        downloadJavadoc = false
    }
}

ext {
    hadoopVersion = '2.6.0'
    hiveVersion = '1.2.1'
    sparkVersion = '2.4.0'
    slf4jVersion = '2.0.17'
    logbackVersion = '1.3.15'
    jacksonVersion = '2.13.3'
    snakeyamlVersion = '1.33'
    commonsCliVersion = '1.5.0'
    poiVersion = '5.2.5'
    junitVersion = '4.13.2'
    derbyVersion = '10.14.2.0'
    thriftVersion = '0.9.3'
}

repositories {
    mavenCentral()
}

configurations {
    // 创建一个新的配置，用于IDEA运行时包含所有依赖
    developmentOnly
    // 让compileClasspath继承developmentOnly配置
    compileClasspath.extendsFrom(developmentOnly)
    // 让runtimeClasspath继承developmentOnly配置
    runtimeClasspath.extendsFrom(developmentOnly)
}

dependencies {
    // 日志依赖 - 这些会被打包
    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
    implementation "ch.qos.logback:logback-classic:${logbackVersion}"

    // Hadoop 依赖 - 只在编译时需要，不打包
    compileOnly "org.apache.hadoop:hadoop-client:${hadoopVersion}"
    compileOnly "org.apache.hadoop:hadoop-common:${hadoopVersion}"
    compileOnly "org.apache.hadoop:hadoop-hdfs:${hadoopVersion}"
    // 为IDEA运行添加Hadoop依赖
    developmentOnly "org.apache.hadoop:hadoop-client:${hadoopVersion}"
    developmentOnly "org.apache.hadoop:hadoop-common:${hadoopVersion}"
    developmentOnly "org.apache.hadoop:hadoop-hdfs:${hadoopVersion}"

    // Hive 依赖 - 只在编译时需要，不打包
    compileOnly "org.apache.hive:hive-exec:${hiveVersion}"
    compileOnly "org.apache.hive:hive-metastore:${hiveVersion}"
    // 为IDEA运行添加Hive依赖
    developmentOnly "org.apache.hive:hive-exec:${hiveVersion}"
    developmentOnly "org.apache.hive:hive-metastore:${hiveVersion}"

    // 添加Thrift依赖
    implementation "org.apache.thrift:libthrift:${thriftVersion}"
    
    // Spark 依赖 - 只在编译时需要，不打包
    compileOnly ("org.apache.spark:spark-core_2.12:${sparkVersion}"){transitive = true }
    compileOnly "org.apache.spark:spark-sql_2.12:${sparkVersion}"
    compileOnly ("org.apache.spark:spark-hive_2.12:${sparkVersion}")
    compileOnly "org.apache.spark:spark-launcher_2.12:${sparkVersion}"
    // 为IDEA运行添加Spark依赖
    developmentOnly ("org.apache.spark:spark-core_2.12:${sparkVersion}"){transitive = true }
    developmentOnly "org.apache.spark:spark-sql_2.12:${sparkVersion}"
    developmentOnly ("org.apache.spark:spark-hive_2.12:${sparkVersion}")
    developmentOnly "org.apache.spark:spark-launcher_2.12:${sparkVersion}"

    // Jackson 依赖 - 这些会被打包
    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}"
    
    // YAML 解析 - 这些会被打包
    implementation "org.yaml:snakeyaml:${snakeyamlVersion}"

    // 命令行参数解析 - 这些会被打包
    implementation "commons-cli:commons-cli:${commonsCliVersion}"

    // Excel 报表生成 - 这些会被打包
    implementation "org.apache.poi:poi:${poiVersion}"
    implementation "org.apache.poi:poi-ooxml:${poiVersion}"
    implementation "org.apache.poi:poi-ooxml-full:${poiVersion}"
    implementation "org.apache.xmlbeans:xmlbeans:5.1.1"

    // ============= 测试相关依赖 =============
    // 基础测试框架
    testImplementation "junit:junit:${junitVersion}"

    // Hadoop MiniCluster 测试依赖
    testImplementation ("org.apache.hadoop:hadoop-minicluster:${hadoopVersion}"){transitive = true }
    testImplementation ("org.apache.hadoop:hadoop-mapreduce-client-jobclient:${hadoopVersion}"){transitive = true }
    // 测试时需要这些实现依赖
    testImplementation ("org.apache.hadoop:hadoop-common:${hadoopVersion}"){transitive = true }
    testImplementation ("org.apache.hadoop:hadoop-hdfs:${hadoopVersion}"){transitive = true }
    testImplementation ("org.apache.hive:hive-metastore:${hiveVersion}") {transitive = true }
    testImplementation("org.apache.hive:hive-exec:${hiveVersion}") {transitive = true }

    // Hive 测试依赖
    testImplementation ("org.apache.derby:derby:${derbyVersion}") {transitive = true }
    testImplementation "org.apache.hive:hive-jdbc:${hiveVersion}"

    // Spark 测试依赖
    testImplementation ("org.apache.spark:spark-sql_2.12:${sparkVersion}"){transitive = true }
    testImplementation ("org.apache.spark:spark-hive_2.12:${sparkVersion}"){transitive = true }
}

application {
    mainClass = 'com.dayu.smallfile.SmallFileMergeApp'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.dayu.smallfile.SmallFileMergeApp'
        )
    }
}

// 创建包含所有依赖的 fat jar，但排除Hadoop/Spark/Hive依赖
tasks.register('fatJar', Jar) {
    archiveClassifier = ''
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    
    from sourceSets.main.output
    dependsOn configurations.runtimeClasspath
    from {
        // 只包含implementation依赖，不包含compileOnly和developmentOnly依赖
        configurations.runtimeClasspath.findAll { 
            it.name.endsWith('jar') && 
            !it.name.contains('hadoop') && 
            !it.name.contains('spark') && 
            !it.name.contains('hive') && 
            !it.name.contains('hdfs')
        }.collect { zipTree(it) }
    }
    
    manifest {
        attributes(
                'Main-Class': 'com.dayu.smallfile.SmallFileMergeApp'
        )
    }
}

// 默认编码设置为UTF-8
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

// 解决测试依赖冲突
configurations.all {
    resolutionStrategy {
        force 'org.apache.logging.log4j:log4j-api:2.8.2'
        force 'org.apache.logging.log4j:log4j-core:2.8.2'
        force "org.apache.thrift:libthrift:${thriftVersion}"
    }
}
/*
configurations.all {
//    exclude group: 'org.slf4j', module: 'slf4j-log4j12'
//    exclude group: 'log4j', module: 'log4j'
    exclude group: 'javax.servlet', module: 'servlet-api'
    exclude group: 'javax.servlet.jsp', module: 'jsp-api'
    exclude group: 'org.mortbay.jetty', module: 'servlet-api-3.0'

    resolutionStrategy {
        force "com.google.guava:guava:30.1.1-jre"
        force "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
        force "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"

    }
}*/
